refactor: refactoring this pullrequest